# welder

./: README.md
install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
install/run_moveit_cpp/lib/run_moveit_cpp/: run_moveit_cpp
install/run_moveit_cpp/share/run_moveit_cpp/: local_setup.sh  package.sh
install/run_moveit_cpp/share/run_moveit_cpp/cmake/: run_moveit_cppConfig.cmake
install/ur5_welder/lib/ur5_welder/: test_node
install/ur5_welder/share/ur5_welder/: local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/ur5_welder/share/ur5_welder/cmake/: ur5_welderConfig.cmake
log/: latest_build
src/run_moveit_cpp/launch/: run_moveit_cpp.launch.py
src/run_moveit_cpp/src/: run_moveit_cpp.cpp
src/ur5_welder/: CMakeLists.txt  package.xml
src/ur5_welder/src/: moveit_testing.cpp
